# prompt-shelf

./: Cargo.toml  Dockerfile  Dockerfile_no_build  LICENSE  README.md  README_zh.md  docker-compose.yml
app/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: routeTree.gen.ts
app/src/components/: command-menu.tsx  profile-dropdown.tsx
app/src/components/layout/: app-sidebar.tsx  authenticated-layout.tsx  types.ts
app/src/components/layout/data/: sidebar-data.ts
app/src/features/: type.ts
app/src/features/auth/: auth-layout.tsx
app/src/features/auth/sign-in/: index.tsx
app/src/features/auth/sign-up/: index.tsx
app/src/features/prompts/: index.tsx
app/src/features/prompts/components/: columns.tsx  commit-create-drawer.tsx  data-table-row-actions.tsx  data-table-toolbar.tsx  prompt-create-dialog.tsx  prompts-dialogs.tsx  prompts-primary-buttons.tsx  rollback-commit-drawer.tsx  version-create-dialog.tsx  version-list-dialog.tsx
app/src/features/prompts/context/: prompts-context.tsx
app/src/features/prompts/data/: schema.ts
app/src/features/settings/: index.tsx
app/src/features/users/: index.tsx
app/src/lib/: api.ts  utils.ts
app/src/routes/_authenticated/: index.tsx
app/src/stores/: authStore.ts
conf/: init.sql  nginx.conf
doc/: PromptShelf.md
src/: init.rs  logger.rs  main.rs
src/db/: mod.rs  organizations.rs  prelude.rs  prompts.rs  user_organizations.rs  users.rs
src/routes/: common.rs  config.rs  control.rs  finder.rs  middleware.rs  mod.rs  prompt.rs  status.rs  user.rs
(+8 files in other folders)
