[package]
name = "prompt-shelf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["rand", "std"] }
axum = "0.8.4"
chrono = "0.4.41"
deadpool-redis = "0.21.1"
jsonwebtoken = "9.3.1"
mimalloc = "0.1.47"
rand = "0.9.1"
sea-orm = { version = "1.1.12", features = ["sqlx"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full", "macros"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "timeout", "trace", "validate-request"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }

[profile.fast]
inherits = "release"
opt-level=3
lto = "fat"
codegen-units = 1
panic= "abort"
